# HackYeah

./: .gitignore  README.md  pyproject.toml
frontend/: angular.json  package-lock.json  package.json
frontend/src/: styles.scss
frontend/src/app/: app.html  app.routes.ts  app.ts
frontend/src/app/core/auth/: auth.service.ts
frontend/src/app/core/form/: report-form-service.ts
frontend/src/app/core/location-stops/: location-stops-service.ts
frontend/src/app/core/models/: util.model.ts
frontend/src/app/features/auth/: auth.routes.ts
frontend/src/app/features/auth/login/: login.html  login.scss  login.spec.ts  login.ts
frontend/src/app/features/favourites/: favorite.routes.ts
frontend/src/app/features/favourites/services/: favorites-service.ts
frontend/src/app/features/favourites/smart-components/favourites-list-component/: favourites-list-component.html  favourites-list-component.ts
frontend/src/app/features/feed/: feed.routes.ts
frontend/src/app/features/feed/container/feed-container/: feed-container.html  feed-container.spec.ts  feed-container.ts
frontend/src/app/features/feed/dumb-components/feed-card-component/: feed-card-component.html  feed-card-component.ts
frontend/src/app/features/feed/model/: feed.dto.model.ts  feed.model.ts
frontend/src/app/features/feed/service/: feed-service.ts  feed-state-service.ts  feed-ui-service.ts
frontend/src/app/features/route-planner/: route-planner.routes.ts
frontend/src/app/features/route-planner/smart-components/route-planner-component/: route-planner-component.html  route-planner-component.ts
frontend/src/app/shared/components/add-report-dialog-component/: add-report-dialog-component.html  add-report-dialog-component.ts
frontend/src/app/shared/components/route-view-component/: route-view-component.html  route-view-component.ts
frontend/src/app/shared/components/stop-select-control-component/: stop-select-control-component.html  stop-select-control-component.ts
frontend/src/app/shared/pipe/: time-ago.pipe.ts
frontend/src/app/shared/ui/expansion/: expansion.spec.ts  expansion.ts
hackyeah/: LICENSE.txt  Makefile  README.md  pyproject.toml
hackyeah/src/hackyeah/: __init__.py
scripts/: start.sh
src/app/: main.py
src/app/core/: config.py
src/app/db/: database.py  db_init.sql  seed_db.sql
src/app/models/: items.py
src/app/routes/: reports.py
src/app/schemas/: form.py  items.py
src/app/services/: autencity_model.py  email_service.py  route_service.py  scoring_db_core.py
src/db/: db_init.sql  seed_db.sql
