[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hackyeah"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "jakub.szulc", email = "szulcak05@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/jakub.szulc/hackyeah#readme"
Issues = "https://github.com/jakub.szulc/hackyeah/issues"
Source = "https://github.com/jakub.szulc/hackyeah"

[tool.hatch.version]
path = "src/hackyeah/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/hackyeah tests}"

[tool.coverage.run]
source_pkgs = ["hackyeah", "tests"]
branch = true
parallel = true
omit = [
  "src/hackyeah/__about__.py",
]

[tool.coverage.paths]
hackyeah = ["src/hackyeah", "*/hackyeah/src/hackyeah"]
tests = ["tests", "*/hackyeah/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
