[project]
name = "hackyeah"
version = "0.1.0"
description = ""
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
    "pydantic>=2.7",
    "python-dotenv>=1.0.1",
    "pymysql>=1.1.0",
    "ruff>=0.6.5",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.isort]
known-first-party = ["hackyeah"]
combine-as-imports = true